--- a/frontend/IcareMobile/app/src/main/res/layout/activity_doctor_details.xml
+++ b/frontend/IcareMobile/app/src/main/res/layout/activity_doctor_details.xml
@@ -31,7 +31,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <androidx.cardview.widget.CardView
-        android:id="@+id/cardView6"
+        android:id="@+id/cvScanEye"
         android:layout_width="370dp"
         android:layout_height="0dp"
         android:layout_marginStart="24dp"
@@ -308,7 +308,7 @@
     </androidx.cardview.widget.CardView>
 
     <androidx.cardview.widget.CardView
-        android:id="@+id/cardView7"
+        android:id="@+id/cvChannel"
         android:layout_width="370dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="24dp"
@@ -319,7 +319,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/cardView6">
+        app:layout_constraintTop_toBottomOf="@+id/cvScanEye">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
