--- a/frontend/IcareMobile/app/src/main/res/layout/activity_eye_diseases.xml
+++ b/frontend/IcareMobile/app/src/main/res/layout/activity_eye_diseases.xml
@@ -31,7 +31,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <androidx.cardview.widget.CardView
-        android:id="@+id/cardView6"
+        android:id="@+id/cvScanEye"
         android:layout_width="370dp"
         android:layout_height="0dp"
         android:layout_marginStart="24dp"
@@ -97,14 +97,14 @@
         android:layout_height="0dp"
         android:layout_marginTop="16dp"
         android:layout_marginBottom="24dp"
-        app:layout_constraintBottom_toTopOf="@+id/cardView7"
+        app:layout_constraintBottom_toTopOf="@+id/cvChannel"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/cardView6"
+        app:layout_constraintTop_toBottomOf="@+id/cvScanEye"
         tools:listitem="@layout/disease_item" />
 
     <androidx.cardview.widget.CardView
-        android:id="@+id/cardView7"
+        android:id="@+id/cvChannel"
         android:layout_width="370dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="24dp"
