--- a/frontend/IcareMobile/app/src/main/res/layout/counsult_item.xml
+++ b/frontend/IcareMobile/app/src/main/res/layout/counsult_item.xml
@@ -16,7 +16,7 @@
         android:layout_height="match_parent">
 
         <TextView
-            android:id="@+id/textView31"
+            android:id="@+id/tvMainNameDis"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="24dp"
