--- a/frontend/IcareMobile/app/src/main/res/layout/activity_eye_scan.xml
+++ b/frontend/IcareMobile/app/src/main/res/layout/activity_eye_scan.xml
@@ -84,6 +84,20 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
+    <com.facebook.shimmer.ShimmerFrameLayout
+        android:id="@+id/shimmerScan"
+        android:visibility="gone"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        app:layout_constraintBottom_toTopOf="@+id/cvScanEyeAct"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView57">
+
+        <include layout="@layout/eyescan_shimmer"/>
+
+    </com.facebook.shimmer.ShimmerFrameLayout>
+
     <androidx.cardview.widget.CardView
         android:id="@+id/cvEyeScanResult"
         android:layout_width="match_parent"
