--- a/frontend/IcareMobile/app/src/main/res/layout/activity_eye_scan.xml
+++ b/frontend/IcareMobile/app/src/main/res/layout/activity_eye_scan.xml
@@ -9,10 +9,10 @@
 
     <androidx.cardview.widget.CardView
         android:id="@+id/cvScanEyeAct"
-        android:layout_width="370dp"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="24dp"
-        android:layout_marginEnd="24dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginEnd="16dp"
         android:layout_marginBottom="16dp"
         app:cardBackgroundColor="@color/bg_btn"
         app:cardCornerRadius="10dp"
@@ -75,8 +75,8 @@
         android:id="@+id/textView57"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="36dp"
-        android:fontFamily="@font/montserrat_medium"
+        android:layout_marginTop="32dp"
+        android:fontFamily="@font/montserrat_bold"
         android:text="Eye Scanning"
         android:textColor="@color/bg_white"
         android:textSize="20sp"
@@ -100,11 +100,11 @@
 
     <androidx.cardview.widget.CardView
         android:id="@+id/cvEyeScanResult"
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="24dp"
+        android:layout_marginStart="16dp"
         android:layout_marginTop="24dp"
-        android:layout_marginEnd="24dp"
+        android:layout_marginEnd="16dp"
         android:visibility="gone"
         app:cardBackgroundColor="@color/bg_secondary"
         app:cardCornerRadius="10dp"
@@ -563,13 +563,14 @@
                 android:id="@+id/textView35"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="4dp"
                 android:layout_marginTop="20dp"
+                android:layout_marginEnd="24dp"
                 android:alpha="0.5"
                 android:fontFamily="@font/montserrat"
                 android:text="Completed"
                 android:textColor="@color/bg_white"
                 android:textSize="12sp"
+                app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toEndOf="@+id/imageView14"
                 app:layout_constraintTop_toBottomOf="@+id/view" />
 
@@ -604,7 +605,7 @@
                 android:background="@color/bg_white"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/textView69" />
+                app:layout_constraintTop_toBottomOf="@+id/cardView12" />
 
             <ImageView
                 android:id="@+id/imageView12"
@@ -678,7 +679,7 @@
 
     <ImageView
         android:id="@+id/imgBack"
-        android:layout_width="50dp"
+        android:layout_width="0dp"
         android:layout_height="40dp"
         android:layout_marginStart="16dp"
         android:layout_marginTop="28dp"
