--- a/frontend/IcareMobile/app/src/main/res/layout/fragment_index.xml
+++ b/frontend/IcareMobile/app/src/main/res/layout/fragment_index.xml
@@ -41,19 +41,17 @@
             android:id="@+id/imageView2"
             android:layout_width="40dp"
             android:layout_height="40dp"
-            android:layout_marginStart="111dp"
-            android:layout_marginTop="48dp"
             android:layout_marginEnd="32dp"
             android:src="@drawable/splash"
+            app:layout_constraintBottom_toBottomOf="@+id/textView7"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@+id/textView7"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="@+id/textView7" />
 
         <TextView
             android:id="@+id/textView9"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="16dp"
+            android:layout_marginStart="24dp"
             android:layout_marginTop="16dp"
             android:fontFamily="@font/montserrat"
             android:text="Actions"
@@ -66,7 +64,7 @@
             android:id="@+id/textView11"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="16dp"
+            android:layout_marginStart="24dp"
             android:layout_marginTop="16dp"
             android:fontFamily="@font/montserrat"
             android:text="OverView"
@@ -77,13 +75,15 @@
 
         <androidx.cardview.widget.CardView
             android:id="@+id/cvChannel"
-            android:layout_width="115dp"
+            android:layout_width="0dp"
             android:layout_height="60dp"
             android:layout_marginStart="16dp"
             android:layout_marginTop="50dp"
             app:cardBackgroundColor="@color/bg_secondary"
             app:cardCornerRadius="10dp"
             app:cardElevation="0dp"
+            app:layout_constraintEnd_toStartOf="@+id/cvDisease"
+            app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toEndOf="@+id/cvScanEye"
             app:layout_constraintTop_toBottomOf="@+id/cardView">
 
@@ -113,15 +113,16 @@
 
         <androidx.cardview.widget.CardView
             android:id="@+id/cvDisease"
-            android:layout_width="115dp"
+            android:layout_width="0dp"
             android:layout_height="60dp"
             android:layout_marginStart="16dp"
             android:layout_marginTop="50dp"
-            android:layout_marginEnd="16dp"
+            android:layout_marginEnd="24dp"
             app:cardBackgroundColor="@color/bg_secondary"
             app:cardCornerRadius="10dp"
             app:cardElevation="0dp"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toEndOf="@+id/cvChannel"
             app:layout_constraintTop_toBottomOf="@+id/cardView">
 
@@ -150,13 +151,16 @@
 
         <androidx.cardview.widget.CardView
             android:id="@+id/cardView3"
-            android:layout_width="150dp"
+            android:layout_width="0dp"
             android:layout_height="150dp"
-            android:layout_marginStart="16dp"
+            android:layout_marginStart="24dp"
             android:layout_marginTop="16dp"
+            android:layout_marginEnd="8dp"
             app:cardBackgroundColor="@color/bg_secondary"
             app:cardCornerRadius="10dp"
             app:cardElevation="0dp"
+            app:layout_constraintEnd_toStartOf="@+id/cardView5"
+            app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/textView11">
 
@@ -208,9 +212,11 @@
 
         <androidx.cardview.widget.CardView
             android:id="@+id/cardView"
-            android:layout_width="380dp"
+            android:layout_width="0dp"
             android:layout_height="150dp"
+            android:layout_marginStart="24dp"
             android:layout_marginTop="24dp"
+            android:layout_marginEnd="24dp"
             app:cardBackgroundColor="@color/bg_secondary"
             app:cardCornerRadius="10dp"
             app:cardElevation="0dp"
@@ -257,13 +263,15 @@
 
         <androidx.cardview.widget.CardView
             android:id="@+id/cvScanEye"
-            android:layout_width="115dp"
+            android:layout_width="0dp"
             android:layout_height="60dp"
-            android:layout_marginStart="16dp"
+            android:layout_marginStart="24dp"
             android:layout_marginTop="50dp"
             app:cardBackgroundColor="@color/bg_secondary"
             app:cardCornerRadius="10dp"
             app:cardElevation="0dp"
+            app:layout_constraintEnd_toStartOf="@+id/cvChannel"
+            app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/cardView">
 
@@ -276,15 +284,13 @@
                     android:id="@+id/textView15"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginStart="16dp"
-                    android:layout_marginEnd="18dp"
                     android:fontFamily="@font/montserrat"
                     android:text="SCAN EYE"
                     android:textColor="@color/bg_white"
                     android:textSize="16sp"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintHorizontal_bias="1.0"
+                    app:layout_constraintHorizontal_bias="0.5"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
                     app:layout_constraintVertical_bias="0.5" />
@@ -295,14 +301,17 @@
 
         <androidx.cardview.widget.CardView
             android:id="@+id/cardView5"
-            android:layout_width="212dp"
+            android:layout_width="0dp"
             android:layout_height="150dp"
+            android:layout_marginStart="8dp"
             android:layout_marginTop="16dp"
-            android:layout_marginEnd="16dp"
+            android:layout_marginEnd="24dp"
             app:cardBackgroundColor="@color/bg_secondary"
             app:cardCornerRadius="10dp"
             app:cardElevation="0dp"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.5"
+            app:layout_constraintStart_toEndOf="@+id/cardView3"
             app:layout_constraintTop_toBottomOf="@+id/textView11">
 
             <androidx.constraintlayout.widget.ConstraintLayout
@@ -324,10 +333,10 @@
                     android:id="@+id/textView17"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginStart="24dp"
+                    android:layout_marginStart="16dp"
                     android:layout_marginTop="24dp"
                     android:fontFamily="@font/montserrat"
-                    android:text="Healthy\nBlinking\nRate A Day"
+                    android:text="Healthy\nBlinking\nRate"
                     android:textColor="@color/bg_white"
                     android:textSize="16sp"
                     app:layout_constraintStart_toStartOf="parent"
@@ -353,13 +362,16 @@
 
         <androidx.cardview.widget.CardView
             android:id="@+id/cardView8"
-            android:layout_width="180dp"
+            android:layout_width="0dp"
             android:layout_height="150dp"
-            android:layout_marginStart="16dp"
+            android:layout_marginStart="24dp"
             android:layout_marginTop="16dp"
+            android:layout_marginEnd="8dp"
             app:cardBackgroundColor="@color/bg_secondary"
             app:cardCornerRadius="10dp"
             app:cardElevation="0dp"
+            app:layout_constraintEnd_toStartOf="@+id/cardView2"
+            app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/cardView3">
 
@@ -412,14 +424,17 @@
 
         <androidx.cardview.widget.CardView
             android:id="@+id/cardView2"
-            android:layout_width="180dp"
+            android:layout_width="0dp"
             android:layout_height="150dp"
+            android:layout_marginStart="8dp"
             android:layout_marginTop="16dp"
-            android:layout_marginEnd="16dp"
+            android:layout_marginEnd="24dp"
             app:cardBackgroundColor="@color/bg_secondary"
             app:cardCornerRadius="10dp"
             app:cardElevation="0dp"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.5"
+            app:layout_constraintStart_toEndOf="@+id/cardView8"
             app:layout_constraintTop_toBottomOf="@+id/cardView5">
 
             <androidx.constraintlayout.widget.ConstraintLayout
@@ -446,7 +461,7 @@
                     android:layout_marginStart="16dp"
                     android:layout_marginTop="32dp"
                     android:fontFamily="@font/montserrat"
-                    android:text="Standard\nSugar\nLimit mgdl"
+                    android:text="Standard\nSugar\nLimit"
                     android:textColor="@color/bg_white"
                     android:textSize="16sp"
                     app:layout_constraintStart_toStartOf="parent"
