--- a/frontend/IcareMobile/app/src/main/res/layout/fragment_profile.xml
+++ b/frontend/IcareMobile/app/src/main/res/layout/fragment_profile.xml
@@ -15,11 +15,11 @@
             android:id="@+id/imageView15"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="32dp"
             android:layout_marginEnd="24dp"
             android:src="@drawable/baseline_edit_24"
+            app:layout_constraintBottom_toBottomOf="@+id/textView39"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="@+id/textView39" />
 
         <TextView
             android:id="@+id/textView39"
@@ -96,7 +96,7 @@
 
         <androidx.cardview.widget.CardView
             android:id="@+id/cardView14"
-            android:layout_width="170dp"
+            android:layout_width="0dp"
             android:layout_height="100dp"
             android:layout_marginStart="24dp"
             android:layout_marginTop="16dp"
@@ -141,7 +141,7 @@
 
         <androidx.cardview.widget.CardView
             android:id="@+id/cardView15"
-            android:layout_width="170dp"
+            android:layout_width="0dp"
             android:layout_height="100dp"
             android:layout_marginStart="23dp"
             android:layout_marginTop="16dp"
