--- a/frontend/IcareMobile/app/src/main/res/layout/progress_loader.xml
+++ b/frontend/IcareMobile/app/src/main/res/layout/progress_loader.xml
@@ -5,6 +5,7 @@
     android:layout_height="wrap_content"
     android:layout_gravity="center_horizontal"
     android:layout_margin="15dp"
+    app:cardBackgroundColor="@color/bg_primary"
     app:cardCornerRadius="15dp">
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -19,7 +20,7 @@
             android:layout_marginTop="16dp"
             android:fontFamily="@font/montserrat_bold"
             android:text="Logging Out"
-            android:textColor="@color/black"
+            android:textColor="@color/bg_white"
             android:textSize="20sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
@@ -33,7 +34,7 @@
             android:layout_marginTop="24dp"
             android:fontFamily="@font/montserrat_medium"
             android:text="Please Wait"
-            android:textColor="@color/black"
+            android:textColor="@color/bg_white"
             android:textSize="18sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.171"
@@ -42,7 +43,6 @@
 
         <ProgressBar
             android:id="@+id/pbLoader"
-            style="?android:attr/progressBarStyle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="24dp"
